ISIS-2892: Upgrade Wicket 8.x -> 9.x
Task-Url: https://issues.apache.org/jira/browse/ISIS-2892

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -182,8 +182,8 @@
 
 		<vaadin.version>23.0.0</vaadin.version>
 
-		<wicket.version>8.13.0</wicket.version>
-		<wicket-bootstrap.version>3.0.0-M18</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
+		<wicket.version>9.6.0</wicket.version>
+		<wicket-bootstrap.version>6.0.0-M4</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
 		<wicket-fullcalendar.version>4.2</wicket-fullcalendar.version>
 		<wicket-source.version>7.0.0</wicket-source.version>
 		<wicket-webjars.version>2.0.20</wicket-webjars.version>
@@ -192,8 +192,8 @@
 		<bootstrap.version>4.6.0-1</bootstrap.version>
 		<popper-js.version>1.16.1-lts</popper-js.version> <!-- org.webjars:popper-js, dictated by bootstrap.version -->
 
-		<wicketstuff.version>8.14.0</wicketstuff.version> <!-- org.wicketstuff:wicketstuff-select2 -->
-		<wicketstuff-gmap3.version>8.14.0</wicketstuff-gmap3.version>
+		<wicketstuff.version>9.5.0</wicketstuff.version> <!-- org.wicketstuff:wicketstuff-select2 -->
+		<wicketstuff-gmap3.version>${wicket.version}</wicketstuff-gmap3.version>
 
 		<xdocreport.version>2.0.2</xdocreport.version>
 
