--- a/core/pom.xml
+++ b/core/pom.xml
@@ -183,6 +183,7 @@
 		<wicket-bootstrap.version>6.0.0-M5</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
 		<wicket-fullcalendar.version>4.2</wicket-fullcalendar.version>
 		<wicket-webjars.version>3.0.4</wicket-webjars.version>
+		<wicket-viewer-jquery.version>3.6.0</wicket-viewer-jquery.version> <!--  as served by wicket via webjars -->
 
 		<wicketstuff.version>${wicket.version}</wicketstuff.version> <!-- org.wicketstuff:wicketstuff-select2 -->
 		<wicketstuff-gmap3.version>${wicket.version}</wicketstuff-gmap3.version>
@@ -1427,6 +1428,12 @@
 				<groupId>org.togglz</groupId>
 				<artifactId>togglz-console</artifactId>
 				<version>${togglz.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.webjars</groupId>
+				<artifactId>jquery</artifactId>
+				<version>${wicket-viewer-jquery.version}</version>			
 			</dependency>
 
 			<dependency>
