ISIS-2877: prepare value type composition testing (wkt)
- introduces a viewmodel for testing the CalendarEvent composite value
type

--- a/regressiontests/stable/pom.xml
+++ b/regressiontests/stable/pom.xml
@@ -53,6 +53,11 @@
 			<groupId>org.apache.isis.valuetypes</groupId>
 			<artifactId>isis-valuetypes-sse-metamodel</artifactId>
 		</dependency>
+		
+        <dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-fullcalendar-applib</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.apache.isis.testing</groupId>
