--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -67,6 +67,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.yaml</groupId>
