--- a/incubator/viewers/vaadin/model/pom.xml
+++ b/incubator/viewers/vaadin/model/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-compat-spec-parser</artifactId>
-			<version>1.0.39</version>
+			<version>1.0.51</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.github.fge</groupId>
@@ -89,18 +89,22 @@
 		<dependency>
 			<groupId>io.swagger.parser.v3</groupId>
 			<artifactId>swagger-parser-v3</artifactId>
-			<version>2.0.5</version>
+			<version>2.0.20</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.swagger.core.v3</groupId>
 					<artifactId>swagger-models</artifactId>
+				</exclusion>
+				<exclusion>
+				    <groupId>io.swagger.core.v3</groupId>
+				    <artifactId>swagger-core</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-core</artifactId>
-			<version>2.0.5</version>
+			<version>2.1.12</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.swagger.core.v3</groupId>
@@ -111,7 +115,7 @@
 		<dependency>
 			<groupId>io.swagger.parser.v3</groupId>
 			<artifactId>swagger-parser-core</artifactId>
-			<version>2.0.5</version>
+			<version>2.0.20</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.swagger.core.v3</groupId>
@@ -122,7 +126,7 @@
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-parser</artifactId>
-			<version>1.0.39</version>
+			<version>1.0.51</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.fge</groupId>
@@ -132,8 +136,14 @@
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-models</artifactId>
-			<version>2.0.5</version>
+			<version>2.1.12</version>
 		</dependency>
+		<dependency>
+		    <groupId>io.swagger.core.v3</groupId>
+		    <artifactId>swagger-core</artifactId>
+		    <version>2.1.12</version>
+		</dependency>
+				
 
 
 		<!-- TEST DEPENDENCIES -->
