--- a/incubator/clients/kroviz/pom.xml
+++ b/incubator/clients/kroviz/pom.xml
@@ -125,6 +125,7 @@
                             </arguments>
                         </configuration>
                     </execution>
+                    <!-- DOES NOT WORK ON WINDOWS (replaced by ant-tasks below ...)
                     <execution>
                         <id>copy-jar</id>
                         <phase>prepare-package</phase>
@@ -153,6 +154,28 @@
                                 </argument>
                             </arguments>
                         </configuration>
+                    </execution> -->
+                </executions> 
+            </plugin>
+            
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <copy
+                                	file="${project.basedir}/build/libs/kroviz-${project.version}.jar" 
+                                	todir="${project.build.directory}" />
+                               	<move 
+                               		file="${project.build.directory}/kroviz-${project.version}.jar" 
+                               		tofile="${project.build.directory}/${project.artifactId}-${project.version}.jar" />
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
