--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -36,16 +36,19 @@ jobs:
         distribution: 'zulu'
         java-version: 11
 
-    - name: Install jq
-      run: sudo apt-get install jq -y
+    - name: Print Maven Version
+      run: mvn --version
 
-    - name: Find latest version from search.maven.org
-      id: version
-      with:
-        cmd: 'curl -k "https://search.maven.org/solrsearch/select?q=g:org.apache.isis.core+AND+a:isis-applib&rows=1&wt=json" | jq -r ".response.docs[0].latestVersion" '
-
-    - name: Show my version
-      run: 'echo "version ${{ steps.version.outputs.value }}"'
+#    - name: Install jq
+#      run: sudo apt-get install jq -y
+#
+#    - name: Find latest version from search.maven.org
+#      id: version
+#      with:
+#        cmd: 'curl -k "https://search.maven.org/solrsearch/select?q=g:org.apache.isis.core+AND+a:isis-applib&rows=1&wt=json" | jq -r ".response.docs[0].latestVersion" '
+#
+#    - name: Show my version
+#      run: 'echo "version ${{ steps.version.outputs.value }}"'
 
 #
 #    - name: Print Maven Version
