--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -28,29 +28,26 @@ jobs:
       MVN_STAGES: deploy
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'zulu'
-        java-version: 11
-
-    - name: Print Maven Version
-      run: mvn --version
-
-    - name: Print jq Version
-      run: jq --version
-
-#    - name: Install jq
-#      run: sudo apt-get install jq -y
-
-    - name: Find latest version from search.maven.org
-      id: version
-      run: 'curl -k "https://search.maven.org/solrsearch/select?q=g:org.apache.isis.core+AND+a:isis-applib&rows=1&wt=json" | jq -r ".response.docs[0].latestVersion" '
+#    - uses: actions/checkout@v3
 #
-#    - name: Show my version
-#      run: 'echo "version ${{ steps.version.outputs.value }}"'
+#    - name: Set up JDK 11
+#      uses: actions/setup-java@v2
+#      with:
+#        distribution: 'zulu'
+#        java-version: 11
+#
+#    - name: Print Maven Version
+#      run: mvn --version
+#
+#    - name: Print jq Version
+#      run: jq --version
+
+    - name: Find baseline from search.maven.org
+      id: baseline
+      run: 'curl -k "https://search.maven.org/solrsearch/select?q=g:org.apache.isis.core+AND+a:isis-applib&rows=1&wt=json" | jq -r ".response.docs[0].latestVersion" '
+
+    - name: Show baseline
+      run: 'echo "baseline ${{ steps.baseline.outputs.value }}"'
 
 #
 #    - name: Print Maven Version
