--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -43,6 +43,11 @@ jobs:
     - name: Share $BASELINE as Environment Variable
       run: echo "BASELINE=${{ steps.calc-baseline.outputs.baseline }}" >> $GITHUB_ENV
 
+#    - name: Dump Env context
+#      env:
+#        ENV_CONTEXT: ${{ toJson(env) }}
+#      run: echo "$ENV_CONTEXT"
+
 #
 #    - name: Activate Cache for Maven Downloads
 #      uses: actions/cache@v2.1.7
@@ -103,10 +108,6 @@ jobs:
 #        GITHUB_TOKEN: ${{ github.token }}
 
 # FOR DEBUG USE
-   - name: Dump Env context
-     env:
-       ENV_CONTEXT: ${{ toJson(env) }}
-     run: echo "$ENV_CONTEXT"
 #   - name: Dump GitHub context
 #     env:
 #       GITHUB_CONTEXT: ${{ toJson(github) }}
