--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -344,7 +344,7 @@ under the License.
 		<assembly.tarLongFileMode>posix</assembly.tarLongFileMode>
 		<!-- set this property for all derived projects:
         -->
-        <project.build.outputTimestamp>2022-02-11T22:20:00Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>1</project.build.outputTimestamp>
     </properties>
 
 <!-- breaks dependabot run: timeout due to repo not accessible
