--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -22,10 +22,6 @@ jobs:
       # operators other than concatenation
       TIMESTAMP: ${{ github.event.head_commit.timestamp }}
 
-      # set this to 'deploy' when intent is to push the built packages to a repo
-      # requires 'secrets' which we don't have yet
-      MVN_STAGES: deploy
-
     steps:
     - uses: actions/checkout@v3
 
@@ -54,18 +50,18 @@ jobs:
         ENV_CONTEXT: ${{ toJson(env) }}
       run: 'echo "$ENV_CONTEXT"'
 
-#    - name: Activate Cache for Maven Downloads
-#      uses: actions/cache@v2.1.7
-#      env:
-#        # change the cache-name if we want to rebuild the cache
-#        # currently there is no concept of cache clearing
-#        cache-name: maven-2021-08
-#      with:
-#        path: ~/.m2/repository
-#        key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/pom.xml') }}
-#        restore-keys: |
-#          ${{ runner.os }}-${{ env.cache-name }}-
-#          ${{ runner.os }}-
+    - name: Activate Cache for Maven Downloads
+      uses: actions/cache@v2.1.7
+      env:
+        # change the cache-name if we want to rebuild the cache
+        # currently there is no concept of cache clearing
+        cache-name: maven-2021-08
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-${{ env.cache-name }}-
+          ${{ runner.os }}-
 
     - name: Create GitHub Release
       uses: actions/create-release@v1
@@ -74,24 +70,24 @@ jobs:
       with:
         tag_name: ${{ env.REVISION }}
         release_name: Release ${{ env.REVISION }}
-#
-#  - name: Build Artifacts
-#      shell: bash
-#      run: bash scripts/ci/build-artifacts.sh
-#      env:
-#        # -Dreleased ... build only the released modules
-#        # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
-#        # -Dmaven.source.skip=true ... no need for the CI build to pull sources
-#        # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
-#        # -T 1C ... 1 build thread per core
-#        MVN_ADDITIONAL_OPTS: >-
-#          -Dmodule-essential
-#          -Dproject.build.outputTimestamp=1
-#          -Denforcer.failFast=true
-#          -Djacoco.skip=true
-#          -DskipTests
-#          -T 1C
-#        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Build Artifacts
+      run: 'bash scripts/ci/build-artifacts.sh'
+      env:
+        # -Dreleased ... build only the released modules
+        # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
+        # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
+        # -T 1C ... 1 build thread per core
+        MVN_ADDITIONAL_OPTS: >-
+          -Dreleased
+          -Denforcer.failFast=true
+          -Djacoco.skip=true
+          -DskipTests
+          -T 1C
+        GITHUB_TOKEN: ${{ github.token }}
+        MVN_STAGES: deploy
+        SOURCE_MODE: attach
+
 
 # FOR DEBUG USE
 #   - name: Dump GitHub context
