--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -306,11 +306,6 @@ under the License.
 			<name>Apache Release Distribution Repository</name>
 			<url>https://repository.apache.org/service/local/staging/deploy/maven2</url>
 		</repository>
-		<repository>
-			<id>github</id>
-			<name>Github Releases</name>
-			<url>https://maven.pkg.github.com/apache/isis</url>
-		</repository>
 		<snapshotRepository>
 			<id>apache.snapshots.https</id>
 			<name>${distMgmtSnapshotsName}</name>
@@ -1098,6 +1093,22 @@ under the License.
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+
+		<profile>
+			<id>github</id>
+			<activation>
+				<property>
+					<name>github</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>Github Releases</name>
+					<url>https://maven.pkg.github.com/apache/isis</url>
+				</repository>
+			</distributionManagement>
 		</profile>
 
 		<!-- APACHE ISIS customisation 15/15: end -->
