--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -79,6 +79,7 @@ jobs:
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
         MVN_ADDITIONAL_OPTS: >-
+          -f isis-parent/pom.xml
           -Dreleased
           -Dgithub
           -Denforcer.failFast=true
