--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -43,7 +43,7 @@
 
 		<spring-boot.version>2.6.4</spring-boot.version>
 		<approvaltests.version>13.4.0</approvaltests.version>
-		
+
 		<resteasy.version>4.6.2.Final</resteasy.version> <!-- keep in sync with property defined in resteasy4-spring-boot-starter -->
 
 	</properties>
@@ -162,7 +162,7 @@
 				<datanucleus-core.version>6.0.0-m3</datanucleus-core.version>
 				<datanucleus-jodatime.version>6.0.0-m3</datanucleus-jodatime.version>
 				<datanucleus-maven-plugin.version>6.0.0-m1</datanucleus-maven-plugin.version>
-		
+
 				<datanucleus-maven-plugin.log4jConfiguration>${basedir}/logging-dn-enhance.properties</datanucleus-maven-plugin.log4jConfiguration>
 				<datanucleus-maven-plugin.verbose>true</datanucleus-maven-plugin.verbose>
 				<datanucleus-maven-plugin.fork>false</datanucleus-maven-plugin.fork>
@@ -462,6 +462,22 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+
+		<profile>
+			<id>github</id>
+			<activation>
+				<property>
+					<name>github</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>Github Releases</name>
+					<url>https://maven.pkg.github.com/apache/isis</url>
+				</repository>
+			</distributionManagement>
 		</profile>
 
 	</profiles>
