--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -1,12 +1,10 @@
-name: Build, Test, Push (Java 11)
+name: Apache Isis Nightly Build
 
 on:
-  push:
-    branches:
-      - ISIS-2975
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
+  schedule:
+    ## daily 02:00 (UTC) in the morning
+    - cron: '0 2 * * *'
 
 jobs:
   build:
@@ -25,12 +23,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-#    - name: Set up JDK 11
-#      uses: actions/setup-java@v2
-#      with:
-#        distribution: 'zulu'
-#        java-version: 11
-#
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu'
+        java-version: 11
+
     - name: Find baseline from search.maven.org
       id: calc-baseline
       run: 'bash scripts/ci/calc-baseline.sh'
@@ -89,7 +87,7 @@ jobs:
           -Dgithub
           -Denforcer.failFast=true
           -Djacoco.skip=true
-          -DskipTests
+          -DinstallAtEnd=true -DdeployAtEnd=true
         GITHUB_TOKEN: ${{ github.token }}
         MVN_STAGES: deploy
         SOURCE_MODE: attach
