--- a/core/pom.xml
+++ b/core/pom.xml
@@ -134,7 +134,7 @@
 		<!-- v3.2 not available yet, use datanucleus staging for now -->
 		<!-- <jdo-api.version>3.2</jdo-api.version> -->
 
-		<jdom.version>2.0.2</jdom.version>
+		<jdom.version>2.0.6.1</jdom.version>
 		<jmock.version>2.12.0</jmock.version>
 		<joda-time.version>2.10.13</joda-time.version>
 		<jopt-simple.version>6.0-alpha-3</jopt-simple.version>
@@ -1327,7 +1327,7 @@
 
 			<dependency>
 				<groupId>org.jdom</groupId>
-				<artifactId>jdom</artifactId>
+				<artifactId>jdom2</artifactId>
 				<version>${jdom.version}</version>
 			</dependency>
 
