Support both @Priority and @MenuOrder in Isis v1

--- a/core/metamodel/pom.xml
+++ b/core/metamodel/pom.xml
@@ -121,6 +121,11 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <profiles>
