--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -81,16 +81,20 @@ jobs:
         # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
-        MVN_ADDITIONAL_OPTS: >-
-          -f core/pom.xml
-          -Dreleased
+        MVN_CLI_OPTS: >-
           -Dgithub
           -Denforcer.failFast=true
-          -Djacoco.skip=true
           -DinstallAtEnd=true -DdeployAtEnd=true
+          -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN 
+          -Dorg.slf4j.simpleLogger.showDateTime=true 
+          -Djava.awt.headless=true 
+          -Xms2048m -Xmx2048m 
+          -XX:+TieredCompilation 
+          -XX:TieredStopAtLevel=1 
+          -Dcoverage 
+          -Dgit          
+          --batch-mode --errors --fail-at-end --show-version
         GITHUB_TOKEN: ${{ github.token }}
-        MVN_STAGES: deploy
-        SOURCE_MODE: attach
 
 
 # FOR DEBUG USE
