--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,9 @@
 
     <distributionManagement>
         <repository>
-            <id>gitlab-maven</id>
-            <url>https://gitlab.com/api/v4/projects/26265305/packages/maven</url>
+            <id>github</id>
+            <name>Github Releases</name>
+            <url>https://maven.pkg.github.com/apache/isis</url>
         </repository>
     </distributionManagement>
 
