--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,9 @@
     </description>
 
     <scm>
-        <connection>scm:git:https://github.com/apache/isis.git</connection>
-        <developerConnection>scm:git:https://github.com/apache/isis.git</developerConnection>
-        <url>https://github.com/apache/isis.git</url>
+        <connection>scm:git:https://github.com/ecpnv-devops/isis.git</connection>
+        <developerConnection>scm:git:https://github.com/ecpnv-devops/isis.git</developerConnection>
+        <url>https://github.com/ecpnv-devops/isis.git</url>
       <tag>HEAD</tag>
     </scm>
 
@@ -46,7 +46,7 @@
         <repository>
             <id>github</id>
             <name>Github Releases</name>
-            <url>https://maven.pkg.github.com/apache/isis</url>
+            <url>https://maven.pkg.github.com/ecpnv-devops/isis</url>
         </repository>
     </distributionManagement>
 
