--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -1,10 +1,10 @@
-name: Apache Isis Nightly Build
+name: ecpnv-devops/isis (prod) adhoc build
 
 on:
   workflow_dispatch:
-  schedule:
-    ## daily 02:00 (UTC) in the morning
-    - cron: '0 2 * * *'
+#  push:
+#    branches:
+#    - 'prod'
 
 jobs:
   build:
