ESTUP2-66: updates workflow to build on push to prod branch

--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -2,9 +2,9 @@ name: ecpnv-devops/isis (prod) adhoc build
 
 on:
   workflow_dispatch:
-#  push:
-#    branches:
-#    - 'prod'
+  push:
+    branches:
+    - 'prod'
 
 jobs:
   build:
