--- a/incubator/viewers/vaadin/model/pom.xml
+++ b/incubator/viewers/vaadin/model/pom.xml
@@ -138,11 +138,11 @@
 			<artifactId>swagger-models</artifactId>
 			<version>2.1.12</version>
 		</dependency>
-		<dependency>
-		    <groupId>io.swagger.core.v3</groupId>
-		    <artifactId>swagger-core</artifactId>
-		    <version>2.1.12</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		    <groupId>io.swagger.core.v3</groupId> -->
+<!-- 		    <artifactId>swagger-core</artifactId> -->
+<!-- 		    <version>2.1.12</version> -->
+<!-- 		</dependency> -->
 				
 
 
