--- a/regressiontests/pom.xml
+++ b/regressiontests/pom.xml
@@ -64,7 +64,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<forkMode>always</forkMode>
+					<forkCount>1C</forkCount>
+					<reuseForks>true</reuseForks>
 					<systemPropertyVariables>
 						<!-- allows regression tests to reduce verbosity when run with surefire -->
 						<isRunningWithSurefire>true</isRunningWithSurefire>
