--- a/tooling/cli/pom.xml
+++ b/tooling/cli/pom.xml
@@ -32,38 +32,10 @@
 
 	<build>
 		<plugins>
-<!--
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<finalName>isis-tooling-cli</finalName>
-							<archive>
-								<manifest>
-									<mainClass>
-										org.apache.isis.tooling.cli.Cli
-									</mainClass>
-								</manifest>
-							</archive>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
-							<appendAssemblyId>false</appendAssemblyId>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
--->
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.3.0</version>
 				<executions>
 					<execution>
 						<id>shade-my-jar</id>
@@ -72,17 +44,30 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<!-- avoids warnings 
+								https://stackoverflow.com/questions/8880361/superfluous-warnings-when-using-maven-shade-plugin-->
+						 	<forceCreation>true</forceCreation> 
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>org.apache.isis.tooling.cli.Cli</mainClass>
 								</transformer>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                  					<resource>META-INF/spring.schemas</resource>
+                  					<resource>META-INF/LICENSE.*</resource>
+                				</transformer>
 							</transformers>
 							<finalName>isis-tooling-cli</finalName>
 							<filters>
 								<filter>
 									<artifact>*:*</artifact>
+									<includes>
+										<include>META-INF/services</include>
+									</includes>
 									<excludes>
 										<exclude>**/Log4j2Plugins.dat</exclude>
+										<exclude>module-info.class</exclude>
+										<exclude>META-INF</exclude>
 									</excludes>
 								</filter>
 							</filters>
@@ -131,11 +116,7 @@
 			<artifactId>picocli</artifactId>
 		</dependency>
 
-
-
 	</dependencies>
-
-
 
 </project>
 
